load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//:__subpackages__"])

cc_library(
    name = "build_recipe_bundle",
    copts = copts,
    hdrs = ["build_recipe_bundle.hh"],
    srcs = ["build_recipe_bundle.cc"],
    deps = [
        "@libarchive//tar",
        "//ecsact/cli/commands/build:build_recipe",
    ],
)
